Auto fixes