@@ -31,8 +31,8 @@ import org.testcontainers.couchbase.BucketDefinition;
 import org.testcontainers.couchbase.CouchbaseContainer;
 
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
@@ -57,7 +57,7 @@ public class CouchbaseLockProviderIntegrationTest extends AbstractStorageBasedLo
         container = new CouchbaseContainer().withBucket(new BucketDefinition(BUCKET_NAME));
         container.start();
 
-        Set<SeedNode> seedNodes = new HashSet<>(Arrays.asList(
+        Set<SeedNode> seedNodes = new HashSet<>(List.of(
             SeedNode.create(container.getContainerIpAddress(),
                 Optional.of(container.getBootstrapCarrierDirectPort()),
                 Optional.of(container.getBootstrapHttpDirectPort()))));
